--- a/README.textile
+++ b/README.textile
@@ -1,6 +1,6 @@
 h1. Flexi Generators
 
-My Rails generator scripts (basead on nifty generators). Generate custom controllers, views, layouts and stylesheets with:
+My Rails generator scripts. Generates controllers, views, layouts and stylesheets with:
 
 * Login layout
 * App layout
@@ -15,10 +15,10 @@ h2. Included Generators
 
 h2. Instalation
 
-<pre>ruby script/plugin install git://github.com/leandroo/flexi_generators.git</pre>
-
-Recommended instalation with Rails application template:
+Instalation with Rails application template (Recommended):
 <pre>rails appname -m http://github.com/leandroo/flexi_generators/raw/master/flexi_template.rb</pre>
+or
+<pre>ruby script/plugin install git://github.com/leandroo/flexi_generators.git</pre>
 
 h2. Dependencies
 
@@ -55,8 +55,8 @@ h2. Screenshots
 
 h2. TODO
 
-* i18n
-* tests, tests, tests
+* Support i18n
+* Tests, tests, tests
 
 h2. Autor
 
