--- a/README.textile
+++ b/README.textile
@@ -15,11 +15,11 @@ h2. Included Generators
 
 h2. Quickstart 
 
-1. Install all dependencies with Rails application template:
-<pre>rails appname -m http://github.com/leandroo/flexi_generators/raw/master/flexi_template.rb</pre>
-2. Open a shell and run <pre>rake db:migrate</pre> to create your database and setup the prepared defaults.
-3. Start your server with <pre>./script/server</pre>
-4. Open up http://localhost:3000
+1. Install all dependencies with Rails application template
+@rails appname -m http://github.com/leandroo/flexi_generators/raw/master/flexi_template.rb@
+2. Open a shell and run @rake db:migrate@> to create your database and setup the prepared defaults.
+3. Start your server with @./script/server@
+4. Open up "http://localhost:3000":http://localhost:3000
 
 h2. Dependencies
 
