--- a/README.textile
+++ b/README.textile
@@ -17,7 +17,7 @@ h2. Quickstart
 
 1. Install all dependencies with Rails application template:
 @rails appname -m http://github.com/leandroo/flexi_generators/raw/master/flexi_template.rb@
-2. @rake gems:install@
+2. Installs all required gems @rake gems:install@
 3. Open a shell and run @rake db:migrate@ to create your database and setup the prepared defaults.
 4. Start your server with @./script/server@
 5. Open up "http://localhost:3000":http://localhost:3000
