--- a/README.textile
+++ b/README.textile
@@ -15,7 +15,9 @@ h2. Included Generators
 
 h2. Quickstart 
 
-1. Install all dependencies with Rails application template
+These 4 simple steps are the essentials to get you smoothly up and running…
+
+1. Create your app and configure all dependencies 
 @rails appname -m http://github.com/leandroo/flexi_generators/raw/master/flexi_template.rb@
 2. Open a shell and run @rake gems:install@ and @rake db:migrate@ to create your database and installs all required gems
 3. Start your server with @./script/server@
