--- a/README.textile
+++ b/README.textile
@@ -20,18 +20,16 @@ These 4 simple steps are the essentials to get you smoothly up and running…
 1. Create your app and configure all dependencies 
 @rails appname -m http://github.com/leandroo/flexi_generators/raw/master/flexi_template.rb@
 2. Open a shell and run @rake gems:install@ and @rake db:migrate@ to create your database and installs all required gems
-3. Start your server with @./script/server@
+3. Start your server with @ruby script/server@
 4. Open up "http://localhost:3000":http://localhost:3000
 
 h2. Dependencies
 
-Tabs Helper plugin: @ruby script/plugin install git://github.com/danielvlopes/tabs_helper.git@
+Tabs Helper plugin: http://github.com/danielvlopes/tabs_helper
 
-Resource Controller plugin: @ruby script/plugin install git://github.com/giraffesoft/resource_controller.git@
+Resource Controller plugin: http://github.com/giraffesoft/resource_controller
 
-Will Paginate plugin/Gem: @ruby script/plugin install git://github.com/mislav/will_paginate.git@ or @gem install will_paginate@
-
-and configure your environment.rb
+Will Paginate plugin/gem: http://github.com/mislav/will_paginate
 
 h2. Usage
 
