--- a/README.textile
+++ b/README.textile
@@ -16,7 +16,7 @@ For more details about configuration in Rails 2 look "here":http://github.com/le
 Rails3
 
 <pre>  
-gem "flexi_generators", '0.2.1'
+gem "flexi_generators"
 </pre>
 
 h2. Included Generators
@@ -30,7 +30,7 @@ h2. Quickstart Rails 3
 These 4 simple steps are the essentials to get you smoothly up and running…
 
 1. Create your app and configure all dependencies 
-@rails new appname -m http://github.com/leandroo/flexi_generators/raw/v0.2.1/template.rb@
+@rails new appname -m http://github.com/leandroo/flexi_generators/raw/master/template.rb@
 2. Run @bundle install@, @rake db:migrate@ and @rake db:seed@ to installs all required gems and create your database
 3. Start your server with @rails server@
 4. Open up "http://localhost:3000":http://localhost:3000
